# fairdata-sso

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  fairdata-sso.service  fairdata-sso.sh  fairdata_sso.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  wsgi.py
ldap/: common.py  retrieve-pas-agreements  retrieve-project-details  retrieve-qvain-admin-organizations  retrieve-user-details  retrieve_pas_agreements.py  retrieve_project_details.py  retrieve_qvain_admin_organizations.py  retrieve_user_details.py
python3_saml/: README.md
python3_saml/demo-django/demo/: views.py
python3_saml/demo-flask/: index.py
python3_saml/demo_pyramid/demo_pyramid/: views.py
python3_saml/src/onelogin/saml2/: auth.py  metadata.py  (+8 more)
rpm/: README  build_rpm  fairdata-sso.rpmspec  postinstall
static/: errors.json  fairdata-sso-test.css  fairdata-sso.css  mock-session.json  notification.css  notification.js  services.json  sso-fdwe.js
swagger/: README  generate.sh  swagger.html  swagger.yaml  yaml-to-html.py
templates/: config.json  login.html  logout.html  saml.json  test.html
tests/: README  run-tests
tests/internal_operations/: test_internal_operations.py
tests/mock/: fd_logindisabled_user.json  fd_non_csc_user.json  fd_non_ida_user.json  fd_pas_user_admin.json  fd_pas_user_propose.json  fd_test_ida_user.json
tests/security/: test_security.py
tests/service_integration/: test_service_integration.py
utils/: deploy  fix-permissions  initialize-service  initialize-venv  restart  run-memory-leak-test  update-venv
(+12 files in other folders)
