[tool.poetry]
name = "fairdata-sso-dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "<2.0"
flask-talisman = "<0.8"
gunicorn = "^20.1.0"
psutil = "<5.7"
psycopg2-binary = "<2.9"
PyJWT = "<2.0"
pyOpenSSL = "<20.0"
python-dateutil = "<2.9"
PyYAML = "<5.2"
requests = "^2.27.1"
responses = "<0.9"
validators = "<0.19"
Flask-SeaSurf = "<0.3"
python3-saml = "1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
