[tool.poetry]
name = "fairdata-sso"
version = "1.0.0"
description = "Fairdata SSO"
authors = ["Fairdata Developers <fairdata-dev@listat.csc.fi>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.8.14"
Werkzeug = "2.3.7"
celery = "5.4.0"
flask = "2.2.2"
gunicorn = "20.1.0"
requests = "2.31.0"

flask-talisman = "*"
psutil = "*"
psycopg2-binary = "*"
PyJWT = "*"
pyOpenSSL = "*"
python-dateutil = "*"
PyYAML = "*"
urllib3 = "*"
responses = "*"
validators = "*"
Flask-SeaSurf = "*"
python3-saml = "*"
lxml = "*"
jinja2 = "*"
markupsafe = "*"
ldap3 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
